--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="http://localhost:3000/assets/style.css">
     <title>Social App</title>
   </head>
   <body>
